--- a/app/assets/stylesheets/Analytic-chosen.css
+++ b/app/assets/stylesheets/Analytic-chosen.css
@@ -75,7 +75,8 @@
   display: block;
   width: 12px;
   height: 12px;
-  background: url('../images/Analytic-chosen-sprite.png') -42px 1px no-repeat;
+  /*background: url('../images/Analytic-chosen-sprite.png') -42px 1px no-repeat;*/
+  background: url('/assets/Analytic-chosen-sprite.png') -42px 1px no-repeat;
   font-size: 1px;
 }
 .chosen-container-single .chosen-single abbr:hover {
@@ -98,7 +99,8 @@
   display: block;
   width: 100%;
   height: 100%;
-  background: url('../images/Analytic-chosen-sprite.png') no-repeat 3px 5px;
+  /*background: url('../images/Analytic-chosen-sprite.png') no-repeat 3px 5px;*/
+  background: url('/assets/Analytic-chosen-sprite.png') no-repeat 3px 5px;
 }
 .chosen-container-single .chosen-search {
   position: relative;
@@ -117,12 +119,18 @@
   height: auto;
   outline: 0;
   border: 1px solid #aaa;
-  background: white url('../images/Analytic-chosen-sprite.png') no-repeat 100% -20px;
-  background: url('../images/Analytic-chosen-sprite.png') no-repeat 100% -20px, -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(1%, #eeeeee), color-stop(15%, #ffffff));
-  background: url('../images/Analytic-chosen-sprite.png') no-repeat 100% -20px, -webkit-linear-gradient(#eeeeee 1%, #ffffff 15%);
-  background: url('../images/Analytic-chosen-sprite.png') no-repeat 100% -20px, -moz-linear-gradient(#eeeeee 1%, #ffffff 15%);
-  background: url('../images/Analytic-chosen-sprite.png') no-repeat 100% -20px, -o-linear-gradient(#eeeeee 1%, #ffffff 15%);
-  background: url('../images/Analytic-chosen-sprite.png') no-repeat 100% -20px, linear-gradient(#eeeeee 1%, #ffffff 15%);
+  /*background: white url('../images/Analytic-chosen-sprite.png') no-repeat 100% -20px;*/
+  /*background: url('../images/Analytic-chosen-sprite.png') no-repeat 100% -20px, -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(1%, #eeeeee), color-stop(15%, #ffffff));*/
+  /*background: url('../images/Analytic-chosen-sprite.png') no-repeat 100% -20px, -webkit-linear-gradient(#eeeeee 1%, #ffffff 15%);*/
+  /*background: url('../images/Analytic-chosen-sprite.png') no-repeat 100% -20px, -moz-linear-gradient(#eeeeee 1%, #ffffff 15%);*/
+  /*background: url('../images/Analytic-chosen-sprite.png') no-repeat 100% -20px, -o-linear-gradient(#eeeeee 1%, #ffffff 15%);*/
+  /*background: url('../images/Analytic-chosen-sprite.png') no-repeat 100% -20px, linear-gradient(#eeeeee 1%, #ffffff 15%);*/
+    background: white url('/assets/Analytic-chosen-sprite.png') no-repeat 100% -20px;
+    background: url('/assets/Analytic-chosen-sprite.png') no-repeat 100% -20px, -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(1%, #eeeeee), color-stop(15%, #ffffff));
+    background: url('/assets/Analytic-chosen-sprite.png') no-repeat 100% -20px, -webkit-linear-gradient(#eeeeee 1%, #ffffff 15%);
+    background: url('/assets/Analytic-chosen-sprite.png') no-repeat 100% -20px, -moz-linear-gradient(#eeeeee 1%, #ffffff 15%);
+    background: url('/assets/Analytic-chosen-sprite.png') no-repeat 100% -20px, -o-linear-gradient(#eeeeee 1%, #ffffff 15%);
+    background: url('/assets/Analytic-chosen-sprite.png') no-repeat 100% -20px, linear-gradient(#eeeeee 1%, #ffffff 15%);
   font-size: 1em;
   font-family: sans-serif;
   line-height: normal;
@@ -264,7 +272,8 @@
   display: block;
   width: 12px;
   height: 12px;
-  background: url('../images/Analytic-chosen-sprite.png') -42px 1px no-repeat;
+  /*background: url('../images/Analytic-chosen-sprite.png') -42px 1px no-repeat;*/
+    background: url('/assets/Analytic-chosen-sprite.png') -42px 1px no-repeat;
   font-size: 1px;
 }
 .chosen-container-multi .chosen-choices li.search-choice .search-choice-close:hover {
@@ -400,12 +409,18 @@
 }
 .chosen-rtl .chosen-search input[type="text"] {
   padding: 4px 5px 4px 20px;
-  background: white url('../images/Analytic-chosen-sprite.png') no-repeat -30px -20px;
-  background: url('../images/Analytic-chosen-sprite.png') no-repeat -30px -20px, -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(1%, #eeeeee), color-stop(15%, #ffffff));
-  background: url('../images/Analytic-chosen-sprite.png') no-repeat -30px -20px, -webkit-linear-gradient(#eeeeee 1%, #ffffff 15%);
-  background: url('../images/Analytic-chosen-sprite.png') no-repeat -30px -20px, -moz-linear-gradient(#eeeeee 1%, #ffffff 15%);
-  background: url('../images/Analytic-chosen-sprite.png') no-repeat -30px -20px, -o-linear-gradient(#eeeeee 1%, #ffffff 15%);
-  background: url('../images/Analytic-chosen-sprite.png') no-repeat -30px -20px, linear-gradient(#eeeeee 1%, #ffffff 15%);
+  /*background: white url('../images/Analytic-chosen-sprite.png') no-repeat -30px -20px;*/
+  /*background: url('../images/Analytic-chosen-sprite.png') no-repeat -30px -20px, -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(1%, #eeeeee), color-stop(15%, #ffffff));*/
+  /*background: url('../images/Analytic-chosen-sprite.png') no-repeat -30px -20px, -webkit-linear-gradient(#eeeeee 1%, #ffffff 15%);*/
+  /*background: url('../images/Analytic-chosen-sprite.png') no-repeat -30px -20px, -moz-linear-gradient(#eeeeee 1%, #ffffff 15%);*/
+  /*background: url('../images/Analytic-chosen-sprite.png') no-repeat -30px -20px, -o-linear-gradient(#eeeeee 1%, #ffffff 15%);*/
+  /*background: url('../images/Analytic-chosen-sprite.png') no-repeat -30px -20px, linear-gradient(#eeeeee 1%, #ffffff 15%);*/
+    background: white url('/assets/Analytic-chosen-sprite.png') no-repeat -30px -20px;
+    background: url('/assets/Analytic-chosen-sprite.png') no-repeat -30px -20px, -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(1%, #eeeeee), color-stop(15%, #ffffff));
+    background: url('/assets/Analytic-chosen-sprite.png') no-repeat -30px -20px, -webkit-linear-gradient(#eeeeee 1%, #ffffff 15%);
+    background: url('/assets/Analytic-chosen-sprite.png') no-repeat -30px -20px, -moz-linear-gradient(#eeeeee 1%, #ffffff 15%);
+    background: url('/assets/Analytic-chosen-sprite.png') no-repeat -30px -20px, -o-linear-gradient(#eeeeee 1%, #ffffff 15%);
+    background: url('/assets/Analytic-chosen-sprite.png') no-repeat -30px -20px, linear-gradient(#eeeeee 1%, #ffffff 15%);
   direction: rtl;
 }
 .chosen-rtl.chosen-container-single .chosen-single div b {
@@ -425,7 +440,8 @@
   .chosen-container-multi .chosen-choices .search-choice .search-choice-close,
   .chosen-container .chosen-results-scroll-down span,
   .chosen-container .chosen-results-scroll-up span {
-    background-image: url('../images/Analytic-chosen-sprite@2x.png') !important;
+    /*background-image: url('../images/Analytic-chosen-sprite@2x.png') !important;*/
+      background-image: url('/assets/Analytic-chosen-sprite@2x.png') !important;
     background-size: 52px 37px !important;
     background-repeat: no-repeat !important;
   }
