--- a/app/assets/stylesheets/Analytic-main.css
+++ b/app/assets/stylesheets/Analytic-main.css
@@ -158,8 +158,8 @@ div[title='analy-view-select'] {
 }
 
 .chart-type-alternate td.image {
-    background-image: url("../images/analytics-chart-type.png");
-    /*background-image: url("/assets/analytics-chart-type.png");*/
+    /*background-image: url("../images/analytics-chart-type.png");*/
+    background-image: url("/assets/analytics-chart-type.png");
     background-repeat: no-repeat;
 }
 .chart-type-alternate td p {
@@ -248,8 +248,8 @@ td.analytics-chart-scatter {
 /************************************************************************** chart detail
 ****************************************************************************************/
 .tcr-trend{
-    background-image:url("../images/TCR-trend.png");
-    /*background-image:url("/assets/TCR-trend.png");*/
+    /*background-image:url("../images/TCR-trend.png");*/
+    background-image:url("/assets/TCR-trend.png");
     background-repeat:no-repeat;
 }
 
