--- a/app/views/admin/kpi_category_templates/_form.html.erb
+++ b/app/views/admin/kpi_category_templates/_form.html.erb
@@ -12,15 +12,15 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :name %><br />
+    <%= f.label :name,'名称' %><br />
     <%= f.text_field :name %>
   </div>
   <div class="field">
-    <%= f.label :description %><br />
+    <%= f.label :description,'描述' %><br />
     <%= f.text_field :description %>
   </div>
    
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit  '提交' %>
   </div>
 <% end %>
