fix add template

--- a/app/views/admin/kpi_templates/show.html.erb
+++ b/app/views/admin/kpi_templates/show.html.erb
@@ -52,7 +52,7 @@
 
 <p>
   <b>Admin kpi category template:</b>
-  <%= @admin_kpi_template.admin_kpi_category_template %>
+  <%= @admin_kpi_template.admin_kpi_category_template.name %>
 </p>
 
 
