--- a/app/views/admin/kpi_templates/index.html.erb
+++ b/app/views/admin/kpi_templates/index.html.erb
@@ -30,7 +30,7 @@
     <td><%= admin_kpi_template.period %></td>
     <td><%= admin_kpi_template.formula %></td>
     <td><%= admin_kpi_template.formula_string %></td>
-    <td><%= admin_kpi_template.admin_kpi_category_template %></td>
+    <td><%= admin_kpi_template.admin_kpi_category_template.name %></td>
     <td><%= link_to 'Show', admin_kpi_template %></td>
     <td><%= link_to 'Edit', edit_admin_kpi_template_path(admin_kpi_template) %></td>
     <td><%= link_to 'Destroy', admin_kpi_template, method: :delete, data: { confirm: 'Are you sure?' } %></td>
