--- a/app/assets/stylesheets/Manage.css
+++ b/app/assets/stylesheets/Manage.css
@@ -12,13 +12,14 @@
     list-style-type: none;
     overflow-y:auto;
     overflow-x:hidden;
+    z-index:20;
 }
 .manage-left-menu li:nth-of-type(2){
     position:relative;
     text-align:center;
     font-size:13px;
-    color:rgba(0,0,0,0.3);
-    background-color:rgba(209,209,209,0.22);
+    color:rgba(103,103,103,0.4);
+    background-color:rgba(209,209,209,0.1);
     padding:0px;
     width:123px;
     height:30px;
@@ -57,9 +58,10 @@
     display:block;
 }
 .manage-left-menu li:nth-of-type(2) .manage-add-tooltip{
-    position:fixed;
+    position:absolute;
     text-align:left;
-    left:141px;
+    left:1px;
+    top:32px;
     font-size:13px;
     line-height:17px;
     display:none;
@@ -72,7 +74,7 @@
 
 .manage-left-menu li{
     text-align:center;
-    color:rgba(0,0,0,0.4);
+    color:rgba(0,0,0,0.2);
     padding:11px 24px;
     cursor:pointer;
     transition:padding 0.3s ease-out;
@@ -97,7 +99,7 @@
 }
 .manage-left-menu li i.icon-item{
     position:absolute;
-    top:9px;
+    top:13px;
     color:rgba(0,0,0,0.4);
     display:none;
     pointer-events:auto;
@@ -108,4 +110,153 @@
 }
 .manage-left-menu li .icon-trash{
     left:25px;
+}
+
+
+/********************************************************************************************************* 右边的内容部分
+*******************************************************************************************************************/
+.manage-right-content{
+    position:absolute;
+    top:135px;
+    left:150px;
+    bottom:0px;
+    right:0px;
+    overflow-x:hidden;
+    overflow-y:auto;
+}
+/**************************************************** 上角的按钮
+*****************************************************************/
+.manage-btn-group{
+    position:relative;
+    top:35px;
+    left:32px;
+    height:70px;
+}
+.manage-btn-group>a{
+    width:100px;
+    margin-right:20px;
+    margin-left:0;
+
+}
+.manage-btn-group>p{
+    margin-top:8px;
+    color:rgba(0, 0, 0, 0.35);
+    cursor:pointer;
+    display:inline-block;
+    transition:color 0.35s ease-out;
+}
+.manage-btn-group>p:hover{
+    color:rgba(0, 0, 0, 0.65);
+}
+.manage-btn-group>i{
+    color:rgba(0, 0, 0, 0.65);
+    position:relative;
+    left:6px;
+    display:none;
+}
+.manage-btn-group>p:hover + i{
+    display:inline-block;
+}
+.manage-btn-group>input{
+    position:absolute;
+    padding:1px 5px;
+    height:19px;
+    width:120px;
+    top:41px;
+    left:0px;
+    font-size:13px;
+    display:none;
+}
+.manage-btn-group>input:focus + span{
+    display:inherit;
+}
+.manage-btn-group>span{
+    font-size:13px;
+    position:absolute;
+    left:0px;
+    top:68px;
+    color:rgba(0,0,0,0.4);
+    display:none;
+}
+/**************************************************** 下角的列表
+*****************************************************************/
+.manage-right-list{
+    position:relative;
+    top:58px;
+}
+.right-list-top-control{
+    height:39px;
+}
+.right-list-top-control>.icheckbox_minimal-aero{
+    left:33px;
+    top:12px;
+}
+.right-list-top-control>a {
+    display:inline-block;
+    width:80px;
+    font-size:13px;
+    display:none;
+}
+.right-list-top-control>a:first-of-type{
+    margin-left:55px;
+    margin-right:-10px;
+}
+/*sortable*/
+.sortable-dragging{
+    opacity:0.9
+}
+.sortable-placeholder{
+    border:1px dashed #ddd !important;
+    background-color:rgba(242,196,84,0.7);
+}
+.sortable-placeholder:after{
+    content:"Drop Here";
+    font-size:20px;
+    color:rgba(0,0,0,0.4);
+    position:relative;
+    width:100px;
+    height:80px;
+    line-height:80px;
+    left:50%;
+    margin-left:-50px;
+}
+.manage-sort-list{
+    list-style:none;
+    padding-left:33px;
+    margin-top:22px;
+}
+.manage-sort-list li{
+    display:inline-block;
+    width:97%;
+    height:80px;
+    border:1px solid #ddd;
+    border-radius:3px;
+    -webkit-border-radius:3px;
+    -moz-border-radius:3px;
+    margin-bottom:15px;
+    position:relative;
+}
+.manage-sort-list li>p{
+    font-family:"Arial";
+    font-weight:bold;
+    font-size:40px;
+    color:rgba(0,0,0,0.25);
+    margin:0;
+    padding-left:5px;
+    width:15px;
+    display:inline-block;
+    height:80px;
+    line-height:80px;
+    cursor:move
+}
+.manage-sort-list li>.icheckbox_minimal-aero{
+    top:1px;
+}
+.manage-sort-list li>table{
+    position:absolute;
+    left:68px;
+    top:5px;
+    bottom:5px;
+    width:inherit;
+    transition:width 0.45s ease-out 0.1s;
 }
