--- a/app/views/kpi_entries/analyse.html.erb
+++ b/app/views/kpi_entries/analyse.html.erb
@@ -28,12 +28,14 @@
                     <label class="index-date-extra-info"></label>
                </div>
                <div class="index-condition-group" style="width:120px">
-                    <label class="radio analy-radio">
-                         <input type="radio" name="chartRadios" value="1" checked>
-                         Summary </label>
-                    <label class="radio analy-radio">
-                         <input type="radio" name="chartRadios" value="2">
-                         Average </label>
+                    <label class="analytics-radio-label">
+                          <input type="radio" name="chartRadios" value="1" checked>
+                          Total
+                    </label>
+                    <label class="analytics-radio-label">
+                          <input type="radio" name="chartRadios" value="2">
+                          Average
+                    </label>
                </div>
                <a class="btn btn-primary btn-normal pull-left" style="margin-top:14px" onclick="prepare_form_chart()">add
                chart</a>
