--- a/app/assets/stylesheets/datepicker.css
+++ b/app/assets/stylesheets/datepicker.css
@@ -197,12 +197,12 @@
 .datepicker table tr td.range.today.disabled,
 .datepicker table tr td.range.today.disabled:hover {
   background-color: #f3d17a;
-  background-image: -moz-linear-gradient(top, #f3c17a, #f3e97a);
-  background-image: -ms-linear-gradient(top, #f3c17a, #f3e97a);
-  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#f3c17a), to(#f3e97a));
-  background-image: -webkit-linear-gradient(top, #f3c17a, #f3e97a);
-  background-image: -o-linear-gradient(top, #f3c17a, #f3e97a);
-  background-image: linear-gradient(top, #f3c17a, #f3e97a);
+  /*background-image: -moz-linear-gradient(top, #f3c17a, #f3e97a);*/
+  /*background-image: -ms-linear-gradient(top, #f3c17a, #f3e97a);*/
+  /*background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#f3c17a), to(#f3e97a));*/
+  /*background-image: -webkit-linear-gradient(top, #f3c17a, #f3e97a);*/
+  /*background-image: -o-linear-gradient(top, #f3c17a, #f3e97a);*/
+  /*background-image: linear-gradient(top, #f3c17a, #f3e97a);*/
   background-repeat: repeat-x;
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#f3c17a', endColorstr='#f3e97a', GradientType=0);
   border-color: #f3e97a #f3e97a #edde34;
@@ -299,7 +299,7 @@
 .datepicker table tr td.active:hover,
 .datepicker table tr td.active.disabled,
 .datepicker table tr td.active.disabled:hover {
-  background-color: #006dcc;
+  background-color: #5FA9DA;
   /*background-image: -moz-linear-gradient(top, #0088cc, #0044cc);*/
   /*background-image: -ms-linear-gradient(top, #0088cc, #0044cc);*/
   /*background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#0088cc), to(#0044cc));*/
@@ -308,7 +308,7 @@
   /*background-image: linear-gradient(top, #0088cc, #0044cc);*/
   background-repeat: repeat-x;
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#0088cc', endColorstr='#0044cc', GradientType=0);
-  border-color: #0044cc #0044cc #002a80;
+  border-color: #5FA9DA;
   border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
   filter: progid:DXImageTransform.Microsoft.gradient(enabled=false);
   color: #fff;
@@ -334,7 +334,7 @@
 .datepicker table tr td.active:hover[disabled],
 .datepicker table tr td.active.disabled[disabled],
 .datepicker table tr td.active.disabled:hover[disabled] {
-  background-color: #5fa9da;
+  background-color: #5FA9DA;
 }
 .datepicker table tr td.active:active,
 .datepicker table tr td.active:hover:active,
@@ -344,7 +344,7 @@
 .datepicker table tr td.active:hover.active,
 .datepicker table tr td.active.disabled.active,
 .datepicker table tr td.active.disabled:hover.active {
-  background-color: #5fa9da \9;
+  background-color: #5FA9DA \9;
 }
 .datepicker table tr td span {
   display: block;
@@ -371,7 +371,7 @@
 .datepicker table tr td span.active:hover,
 .datepicker table tr td span.active.disabled,
 .datepicker table tr td span.active.disabled:hover {
-  background-color: #5fa9da;
+  background-color: #5FA9DA;
   /*background-image: -moz-linear-gradient(top, #0088cc, #0044cc);*/
   /*background-image: -ms-linear-gradient(top, #0088cc, #0044cc);*/
   /*background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#0088cc), to(#0044cc));*/
@@ -406,7 +406,7 @@
 .datepicker table tr td span.active:hover[disabled],
 .datepicker table tr td span.active.disabled[disabled],
 .datepicker table tr td span.active.disabled:hover[disabled] {
-  background-color: #5fa9da;
+  background-color: #5FA9DA;
 }
 .datepicker table tr td span.active:active,
 .datepicker table tr td span.active:hover:active,
@@ -416,7 +416,7 @@
 .datepicker table tr td span.active:hover.active,
 .datepicker table tr td span.active.disabled.active,
 .datepicker table tr td span.active.disabled:hover.active {
-  background-color: #003399 \9;
+  background-color: #5FA9DA \9;
 }
 .datepicker table tr td span.old,
 .datepicker table tr td span.new {
@@ -478,4 +478,36 @@
   border: 1px solid #ccc;
   margin-left: -5px;
   margin-right: -5px;
+}
+.datepicker.dropdown-menu {
+  position: absolute;
+  top: 100%;
+  left: 0;
+  z-index: 1000;
+  float: left;
+  display: none;
+  min-width: 160px;
+  list-style: none;
+  background-color: #ffffff;
+  border: 1px solid #ccc;
+  border: 1px solid rgba(0, 0, 0, 0.2);
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  border-radius: 5px;
+  -webkit-box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
+  -moz-box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
+  -webkit-background-clip: padding-box;
+  /*-moz-background-clip: padding;*/
+  background-clip: padding-box;
+  *border-right-width: 2px;
+  *border-bottom-width: 2px;
+  color: #333333;
+  font-family: "open-sans", Arial, sans-serif;
+  font-size: 13px;
+  line-height: 18px;
+}
+.datepicker.dropdown-menu th,
+.datepicker.dropdown-menu td {
+  padding: 4px 5px;
 }
