--- a/app/assets/stylesheets/datetimepicker.css
+++ b/app/assets/stylesheets/datetimepicker.css
@@ -3,6 +3,7 @@
  *
  * Copyright 2012 Stefan Petre
  * Improvements by Andrew Rowls
+ * Improvements by Sébastien Malot
  * Licensed under the Apache License v2.0
  * http://www.apache.org/licenses/LICENSE-2.0
  *
@@ -10,17 +11,11 @@
 .datetimepicker {
   padding: 4px;
   margin-top: 1px;
+  white-space: normal;
   -webkit-border-radius: 4px;
   -moz-border-radius: 4px;
   border-radius: 4px;
   direction: ltr;
-  /*.dow {
-		border-top: 1px solid #ddd !important;
-	}*/
-
-}
-.datetimepicker-inline {
-  width: 220px;
 }
 .datetimepicker.datetimepicker-rtl {
   direction: rtl;
@@ -28,11 +23,77 @@
 .datetimepicker.datetimepicker-rtl table tr td span {
   float: right;
 }
-.datetimepicker-dropdown, .datetimepicker-dropdown-left {
+.datetimepicker > div {
+  display: none;
+}
+.datetimepicker.minutes div.datetimepicker-minutes {
+  display: block;
+}
+.datetimepicker.hours div.datetimepicker-hours {
+  display: block;
+}
+.datetimepicker.days div.datetimepicker-days {
+  display: block;
+}
+.datetimepicker.months div.datetimepicker-months {
+  display: block;
+}
+.datetimepicker.years div.datetimepicker-years {
+  display: block;
+}
+.datetimepicker table {
+  margin: 0;
+}
+.datetimepicker table tr td.minute:hover {
+  background: #eeeeee;
+  cursor: pointer;
+}
+.datetimepicker table tr td.hour:hover {
+  background: #eeeeee;
+  cursor: pointer;
+}
+.datetimepicker table tr td.day:hover {
+  background: #eeeeee;
+  cursor: pointer;
+}
+.datetimepicker table tr td span {
+  display: block;
+  width: 23%;
+  height: 54px;
+  line-height: 54px;
+  float: left;
+  margin: 1%;
+  cursor: pointer;
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  border-radius: 4px;
+}
+.datetimepicker table tr td span:hover {
+  background: #eeeeee;
+}
+.datetimepicker table tr td span.old {
+  color: #999999;
+}
+.datetimepicker .datetimepicker-hours span {
+  height: 26px;
+  line-height: 26px;
+}
+.datetimepicker .datetimepicker-minutes span {
+  height: 26px;
+  line-height: 26px;
+}
+.datetimepicker th.switch {
+  width: 145px;
+}
+.datetimepicker-inline {
+  width: 220px;
+}
+.datetimepicker-dropdown,
+.datetimepicker-dropdown-left {
   top: 0;
   left: 0;
 }
-[class*=" datetimepicker-dropdown"]:before {
+[class*="datetimepicker-dropdown"]:before {
   content: '';
   display: inline-block;
   border-left: 7px solid transparent;
@@ -41,7 +102,7 @@
   border-bottom-color: rgba(0, 0, 0, 0.2);
   position: absolute;
 }
-[class*=" datetimepicker-dropdown"]:after {
+[class*="datetimepicker-dropdown"]:after {
   content: '';
   display: inline-block;
   border-left: 6px solid transparent;
@@ -49,7 +110,7 @@
   border-bottom: 6px solid #ffffff;
   position: absolute;
 }
-[class*=" datetimepicker-dropdown-top"]:before {
+[class*="datetimepicker-dropdown-top"]:before {
   content: '';
   display: inline-block;
   border-left: 7px solid transparent;
@@ -58,7 +119,7 @@
   border-top-color: rgba(0, 0, 0, 0.2);
   border-bottom: 0;
 }
-[class*=" datetimepicker-dropdown-top"]:after {
+[class*="datetimepicker-dropdown-top"]:after {
   content: '';
   display: inline-block;
   border-left: 6px solid transparent;
@@ -98,28 +159,7 @@
   bottom: -6px;
   left: 7px;
 }
-.datetimepicker > div {
-  display: none;
-}
-.datetimepicker.minutes div.datetimepicker-minutes {
-    display: block;
-}
-.datetimepicker.hours div.datetimepicker-hours {
-    display: block;
-}
-.datetimepicker.days div.datetimepicker-days {
-    display: block;
-}
-.datetimepicker.months div.datetimepicker-months {
-  display: block;
-}
-.datetimepicker.years div.datetimepicker-years {
-  display: block;
-}
-.datetimepicker table {
-  margin: 0;
-}
-.datetimepicker  td,
+.datetimepicker td,
 .datetimepicker th {
   text-align: center;
   width: 20px;
@@ -132,18 +172,6 @@
 .table-striped .datetimepicker table tr td,
 .table-striped .datetimepicker table tr th {
   background-color: transparent;
-}
-.datetimepicker table tr td.minute:hover {
-    background: #eeeeee;
-    cursor: pointer;
-}
-.datetimepicker table tr td.hour:hover {
-    background: #eeeeee;
-    cursor: pointer;
-}
-.datetimepicker table tr td.day:hover {
-    background: #eeeeee;
-    cursor: pointer;
 }
 .datetimepicker table tr td.old,
 .datetimepicker table tr td.new {
@@ -160,12 +188,12 @@
 .datetimepicker table tr td.today.disabled,
 .datetimepicker table tr td.today.disabled:hover {
   background-color: #fde19a;
-  /*background-image: -moz-linear-gradient(top, #fdd49a, #fdf59a);*/
-  /*background-image: -ms-linear-gradient(top, #fdd49a, #fdf59a);*/
-  /*background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#fdd49a), to(#fdf59a));*/
-  /*background-image: -webkit-linear-gradient(top, #fdd49a, #fdf59a);*/
-  /*background-image: -o-linear-gradient(top, #fdd49a, #fdf59a);*/
-  /*background-image: linear-gradient(top, #fdd49a, #fdf59a);*/
+  background-image: -moz-linear-gradient(top, #fdd49a, #fdf59a);
+  background-image: -ms-linear-gradient(top, #fdd49a, #fdf59a);
+  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#fdd49a), to(#fdf59a));
+  background-image: -webkit-linear-gradient(top, #fdd49a, #fdf59a);
+  background-image: -o-linear-gradient(top, #fdd49a, #fdf59a);
+  background-image: linear-gradient(top, #fdd49a, #fdf59a);
   background-repeat: repeat-x;
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#fdd49a', endColorstr='#fdf59a', GradientType=0);
   border-color: #fdf59a #fdf59a #fbed50;
@@ -208,13 +236,13 @@
 .datetimepicker table tr td.active:hover,
 .datetimepicker table tr td.active.disabled,
 .datetimepicker table tr td.active.disabled:hover {
-  /*background-color: #006dcc;*/
-  /*background-image: -moz-linear-gradient(top, #0088cc, #0044cc);*/
-  /*background-image: -ms-linear-gradient(top, #0088cc, #0044cc);*/
-  /*background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#0088cc), to(#0044cc));*/
-  /*background-image: -webkit-linear-gradient(top, #0088cc, #0044cc);*/
-  /*background-image: -o-linear-gradient(top, #0088cc, #0044cc);*/
-  /*background-image: linear-gradient(top, #0088cc, #0044cc);*/
+  background-color: #006dcc;
+  background-image: -moz-linear-gradient(top, #0088cc, #0044cc);
+  background-image: -ms-linear-gradient(top, #0088cc, #0044cc);
+  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#0088cc), to(#0044cc));
+  background-image: -webkit-linear-gradient(top, #0088cc, #0044cc);
+  background-image: -o-linear-gradient(top, #0088cc, #0044cc);
+  background-image: linear-gradient(top, #0088cc, #0044cc);
   background-repeat: repeat-x;
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#0088cc', endColorstr='#0044cc', GradientType=0);
   border-color: #0044cc #0044cc #002a80;
@@ -243,7 +271,7 @@
 .datetimepicker table tr td.active:hover[disabled],
 .datetimepicker table tr td.active.disabled[disabled],
 .datetimepicker table tr td.active.disabled:hover[disabled] {
-  background-color: #5fa9da;
+  background-color: #0044cc;
 }
 .datetimepicker table tr td.active:active,
 .datetimepicker table tr td.active:hover:active,
@@ -253,23 +281,7 @@
 .datetimepicker table tr td.active:hover.active,
 .datetimepicker table tr td.active.disabled.active,
 .datetimepicker table tr td.active.disabled:hover.active {
-  background-color: #5fa9da \9;
-}
-.datetimepicker table tr td span {
-  display: block;
-  width: 23%;
-  height: 54px;
-  line-height: 54px;
-  float: left;
-  margin: 1%;
-  cursor: pointer;
-  -webkit-border-radius: 4px;
-  -moz-border-radius: 4px;
-  border-radius: 4px;
-}
-.datetimepicker .datetimepicker-hours span {
-  height: 26px;
-  line-height: 26px;
+  background-color: #003399 \9;
 }
 .datetimepicker .datetimepicker-hours table tr td span.hour_am,
 .datetimepicker .datetimepicker-hours table tr td span.hour_pm {
@@ -279,13 +291,6 @@
 .datetimepicker .datetimepicker-minutes fieldset legend {
   margin-bottom: inherit;
   line-height: 30px;
-}
-.datetimepicker .datetimepicker-minutes span {
-  height: 26px;
-  line-height: 26px;
-}
-.datetimepicker table tr td span:hover {
-  background: #eeeeee;
 }
 .datetimepicker table tr td span.disabled,
 .datetimepicker table tr td span.disabled:hover {
@@ -297,13 +302,13 @@
 .datetimepicker table tr td span.active:hover,
 .datetimepicker table tr td span.active.disabled,
 .datetimepicker table tr td span.active.disabled:hover {
-  /*background-color: #006dcc;*/
-  /*background-image: -moz-linear-gradient(top, #0088cc, #0044cc);*/
-  /*background-image: -ms-linear-gradient(top, #0088cc, #0044cc);*/
-  /*background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#0088cc), to(#0044cc));*/
-  /*background-image: -webkit-linear-gradient(top, #0088cc, #0044cc);*/
-  /*background-image: -o-linear-gradient(top, #0088cc, #0044cc);*/
-  /*background-image: linear-gradient(top, #0088cc, #0044cc);*/
+  background-color: #006dcc;
+  background-image: -moz-linear-gradient(top, #0088cc, #0044cc);
+  background-image: -ms-linear-gradient(top, #0088cc, #0044cc);
+  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#0088cc), to(#0044cc));
+  background-image: -webkit-linear-gradient(top, #0088cc, #0044cc);
+  background-image: -o-linear-gradient(top, #0088cc, #0044cc);
+  background-image: linear-gradient(top, #0088cc, #0044cc);
   background-repeat: repeat-x;
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#0088cc', endColorstr='#0044cc', GradientType=0);
   border-color: #0044cc #0044cc #002a80;
@@ -332,7 +337,7 @@
 .datetimepicker table tr td span.active:hover[disabled],
 .datetimepicker table tr td span.active.disabled[disabled],
 .datetimepicker table tr td span.active.disabled:hover[disabled] {
-  background-color: #5fa9da;
+  background-color: #0044cc;
 }
 .datetimepicker table tr td span.active:active,
 .datetimepicker table tr td span.active:hover:active,
@@ -342,13 +347,7 @@
 .datetimepicker table tr td span.active:hover.active,
 .datetimepicker table tr td span.active.disabled.active,
 .datetimepicker table tr td span.active.disabled:hover.active {
-  background-color: #5fa9da \9;
-}
-.datetimepicker table tr td span.old {
-  color: #999999;
-}
-.datetimepicker th.switch {
-  width: 145px;
+  background-color: #003399 \9;
 }
 .datetimepicker thead tr:first-child th,
 .datetimepicker tfoot tr:first-child th {
@@ -364,3 +363,40 @@
   width: 14px;
   height: 14px;
 }
+.datetimepicker.dropdown-menu {
+  position: absolute;
+  top: 100%;
+  left: 0;
+  z-index: 1000;
+  float: left;
+  display: none;
+  min-width: 160px;
+  list-style: none;
+  background-color: #ffffff;
+  border: 1px solid #ccc;
+  border: 1px solid rgba(0, 0, 0, 0.2);
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  border-radius: 5px;
+  -webkit-box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
+  -moz-box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
+  -webkit-background-clip: padding-box;
+  /*-moz-background-clip: padding;*/
+  background-clip: padding-box;
+  *border-right-width: 2px;
+  *border-bottom-width: 2px;
+  color: #333333;
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-size: 13px;
+  line-height: 18px;
+}
+.datetimepicker.dropdown-menu th,
+.datetimepicker.dropdown-menu td {
+  padding: 4px 5px;
+}
+.datetimepicker .prev,
+.datetimepicker .next {
+  font-style: normal;
+}
+
