--- a/app/assets/stylesheets/_epm_base.css
+++ b/app/assets/stylesheets/_epm_base.css
@@ -287,7 +287,8 @@ nav ul li a:hover .nav-entry-kpi{
     font-size: 13px;
     cursor: default;
     margin-bottom: 0px;
-    font-family: 'open-sans'
+    font-family: 'open-sans';
+    height:20px;
 }
 
 .index-pick-date[type="text"]:nth-of-type(2) {
