--- a/app/assets/stylesheets/datetimepicker.css
+++ b/app/assets/stylesheets/datetimepicker.css
@@ -188,12 +188,12 @@
 .datetimepicker table tr td.today.disabled,
 .datetimepicker table tr td.today.disabled:hover {
   background-color: #fde19a;
-  background-image: -moz-linear-gradient(top, #fdd49a, #fdf59a);
-  background-image: -ms-linear-gradient(top, #fdd49a, #fdf59a);
-  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#fdd49a), to(#fdf59a));
-  background-image: -webkit-linear-gradient(top, #fdd49a, #fdf59a);
-  background-image: -o-linear-gradient(top, #fdd49a, #fdf59a);
-  background-image: linear-gradient(top, #fdd49a, #fdf59a);
+  /*background-image: -moz-linear-gradient(top, #fdd49a, #fdf59a);*/
+  /*background-image: -ms-linear-gradient(top, #fdd49a, #fdf59a);*/
+  /*background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#fdd49a), to(#fdf59a));*/
+  /*background-image: -webkit-linear-gradient(top, #fdd49a, #fdf59a);*/
+  /*background-image: -o-linear-gradient(top, #fdd49a, #fdf59a);*/
+  /*background-image: linear-gradient(top, #fdd49a, #fdf59a);*/
   background-repeat: repeat-x;
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#fdd49a', endColorstr='#fdf59a', GradientType=0);
   border-color: #fdf59a #fdf59a #fbed50;
@@ -236,13 +236,13 @@
 .datetimepicker table tr td.active:hover,
 .datetimepicker table tr td.active.disabled,
 .datetimepicker table tr td.active.disabled:hover {
-  background-color: #006dcc;
-  background-image: -moz-linear-gradient(top, #0088cc, #0044cc);
-  background-image: -ms-linear-gradient(top, #0088cc, #0044cc);
-  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#0088cc), to(#0044cc));
-  background-image: -webkit-linear-gradient(top, #0088cc, #0044cc);
-  background-image: -o-linear-gradient(top, #0088cc, #0044cc);
-  background-image: linear-gradient(top, #0088cc, #0044cc);
+  background-color: #5FA9DA;
+  /*background-image: -moz-linear-gradient(top, #0088cc, #0044cc);*/
+  /*background-image: -ms-linear-gradient(top, #0088cc, #0044cc);*/
+  /*background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#0088cc), to(#0044cc));*/
+  /*background-image: -webkit-linear-gradient(top, #0088cc, #0044cc);*/
+  /*background-image: -o-linear-gradient(top, #0088cc, #0044cc);*/
+  /*background-image: linear-gradient(top, #0088cc, #0044cc);*/
   background-repeat: repeat-x;
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#0088cc', endColorstr='#0044cc', GradientType=0);
   border-color: #0044cc #0044cc #002a80;
@@ -271,7 +271,7 @@
 .datetimepicker table tr td.active:hover[disabled],
 .datetimepicker table tr td.active.disabled[disabled],
 .datetimepicker table tr td.active.disabled:hover[disabled] {
-  background-color: #0044cc;
+  background-color: #5FA9DA;
 }
 .datetimepicker table tr td.active:active,
 .datetimepicker table tr td.active:hover:active,
@@ -281,7 +281,7 @@
 .datetimepicker table tr td.active:hover.active,
 .datetimepicker table tr td.active.disabled.active,
 .datetimepicker table tr td.active.disabled:hover.active {
-  background-color: #003399 \9;
+  background-color: #5FA9DA \9;
 }
 .datetimepicker .datetimepicker-hours table tr td span.hour_am,
 .datetimepicker .datetimepicker-hours table tr td span.hour_pm {
@@ -302,13 +302,13 @@
 .datetimepicker table tr td span.active:hover,
 .datetimepicker table tr td span.active.disabled,
 .datetimepicker table tr td span.active.disabled:hover {
-  background-color: #006dcc;
-  background-image: -moz-linear-gradient(top, #0088cc, #0044cc);
-  background-image: -ms-linear-gradient(top, #0088cc, #0044cc);
-  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#0088cc), to(#0044cc));
-  background-image: -webkit-linear-gradient(top, #0088cc, #0044cc);
-  background-image: -o-linear-gradient(top, #0088cc, #0044cc);
-  background-image: linear-gradient(top, #0088cc, #0044cc);
+  background-color: #5FA9DA;
+  /*background-image: -moz-linear-gradient(top, #0088cc, #0044cc);*/
+  /*background-image: -ms-linear-gradient(top, #0088cc, #0044cc);*/
+  /*background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#0088cc), to(#0044cc));*/
+  /*background-image: -webkit-linear-gradient(top, #0088cc, #0044cc);*/
+  /*background-image: -o-linear-gradient(top, #0088cc, #0044cc);*/
+  /*background-image: linear-gradient(top, #0088cc, #0044cc);*/
   background-repeat: repeat-x;
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#0088cc', endColorstr='#0044cc', GradientType=0);
   border-color: #0044cc #0044cc #002a80;
@@ -337,7 +337,7 @@
 .datetimepicker table tr td span.active:hover[disabled],
 .datetimepicker table tr td span.active.disabled[disabled],
 .datetimepicker table tr td span.active.disabled:hover[disabled] {
-  background-color: #0044cc;
+  background-color: #5FA9DA;
 }
 .datetimepicker table tr td span.active:active,
 .datetimepicker table tr td span.active:hover:active,
@@ -347,7 +347,7 @@
 .datetimepicker table tr td span.active:hover.active,
 .datetimepicker table tr td span.active.disabled.active,
 .datetimepicker table tr td span.active.disabled:hover.active {
-  background-color: #003399 \9;
+  background-color: #5FA9DA \9;
 }
 .datetimepicker thead tr:first-child th,
 .datetimepicker tfoot tr:first-child th {
@@ -387,7 +387,7 @@
   *border-right-width: 2px;
   *border-bottom-width: 2px;
   color: #333333;
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: "open-sans", Arial, sans-serif;
   font-size: 13px;
   line-height: 18px;
 }
