--- a/app/views/kpis/index.html.erb
+++ b/app/views/kpis/index.html.erb
@@ -1,48 +1,68 @@
-<div class="sub-middle sub-middle-manage">
-     <h3 class="text-center">管理我的KPI </h3>
+
+<%= render :partial=>'kpi_categories/left_menu'%>
+<%= render :partial=>'kpis/new'%>
+<div class="manage-right-content" id="manage-right-content">
+
+        <div class="manage-btn-group" id="manage-btn-group">
+            <a class="btn btn-primary" id="kpi-add-show"><i class="icon-plus"></i> KPI</a>
+            <a class="btn btn-primary kpi-library-btn" id="kpi-library-btn"><i class="icon-th-list"></i> KPI Library</a>
+            <p id="manage-edit-target" >Category1 </p>
+            <i class="icon-pencil"></i>
+            <input type="text"/>
+            <span>Enter:Confirm&nbsp;&nbsp;&nbsp;&nbsp;Esc:Cancel</span>
+        </div>
+
+
+
+        <div class="manage-right-list">
+            <div class="right-list-top-control" id="right-list-top-control">
+                <input type="checkbox" id="manage-total-check"/>
+                <a class="btn" id="manage-item-remove">Delete</a>
+                <a class="btn" id="manage-item-edit">Edit</a>
+            </div>
+
+
+            <ul id="manage-sort-list" class="manage-sort-list">
+                <%@kpis.each_with_index do |kpi,i|%>
+                <li id="<%= kpi.id%>">
+                    <p class="sort-handle">:</p>
+                    <input type="checkbox" />
+                    <table class="category">
+                        <tr>
+                            <td title='<%= kpi.name%>'><%= kpi.name%></td>
+                            <td ><%= KpiFrequency.get_desc_by_value(kpi.frequency)%></td>
+                            <td ><%= KpiDirection.get_desc_by_value(kpi.direction)%></td>
+                            <td class="manage-kpi-target" title='<%= KpiUnit.parse_entry_value(kpi.unit, kpi.target)%>+<%= KpiUnit.get_entry_unit_sym(kpi.unit)%>'>
+                                <span class="can-change"><%= KpiUnit.parse_entry_value(kpi.unit, kpi.target)%></span>
+                                <span><%= KpiUnit.get_entry_unit_sym(kpi.unit)%></span>
+                                <input type='text' effect_on="<%= kpi.id%>"/>
+                            </td>
+                            <%if kpi.is_calculated%>
+                                 <td title="<%= kpi.formula_string%>"><%= kpi.formula_string%></td>
+                            <%else%>
+                                 <td>No</td>
+                            <%end%>
+                        </tr>
+                        <tr>
+                            <td title='<%= kpi.description%>'><%= kpi.description%></td>
+                            <td>Frequency</td>
+                            <td>Trend</td>
+                            <td>Target</td>
+                            <td>Is Calcu Type</td>
+                        </tr>
+                    </table>
+                </li>
+                <%end%>
+            </ul>
+
+
+        </div>
 </div>
-<div class="middle clearfix">
-     <%= render :partial=>'kpi_categories/left_menu'%>
-     <%= render :partial=>'kpis/new'%>
-     <div class="right-content pull-left" id="right-content">
-          <table class="manage-kpi" id="kpi-table">
-               <tr>
-                    <th>ID</th>
-                    <th>类别</th>
-                    <th>名称</th>
-                    <th width="221px">描述</th>
-                    <th>周期</th>
-                    <th>目标值</th>
-                    <th>单位</th>
-                    <th>方向</th>
-                    <th width="50px">计算型</th>
-                    <th width="50px" colspan="2">操作</th>
-               </tr>
-               <%@kpis.each_with_index do |kpi,i|%>
-               <tr id="<%= kpi.id%>">
-                    <td align="center" class="kpi-order-id"><%= i+1%></td>
-                    <td align="center" class="kpi-entity"><%= kpi.category_name%></td>
-                    <td align="center"><%= kpi.name%></td>
-                    <td align="center"><%= kpi.description%></td>
-                    <td align="center"><%= KpiFrequency.get_desc_by_value(kpi.frequency)%></td>
-                    <td align="center" class="kpi-target"><%= KpiUnit.parse_entry_value(kpi.unit, kpi.target)%></td>
-                    <td align="center"><%= KpiUnit.get_entry_unit_sym(kpi.unit)%></td>
-                    <td align="center"><%= KpiDirection.get_desc_by_value(kpi.direction)%></td>
-                    <%if kpi.is_calculated%>
-                    <td align="center" title="<%= kpi.formula_string%>">是</td>
-                    <%else%>
-                    <td align="center" >否</td>
-                    <%end%>
-                    <td align="center"><div class="manage-operate manage-operate-edit" data-belong="<%= kpi.id%>" onclick="edit_kpiItem(event)"></div><a class="btn btn-success manage-operate-reverse  hide" data-belong="<%= kpi.id%>" onclick="finish_editKPI(event)">完成</a></td>
-                    <td align="center"><div class="manage-operate manage-operate-del" data-belong="<%= kpi.id%>" onclick="remove_kpiItem(event)"></div><a class="btn manage-operate-reverse  hide" id="cancel-edit-kpi-<%= kpi.id%>" data-belong="<%= kpi.id%>" onclick="cancel_editKPI(event)">取消</a></td>
-               </tr>
-               <%end%>
-          </table>
-          <a class="btn manage-add-btn btn-primary pull-right" onclick="show_addBlock(event)" data-manage="kpi">添加KPI</a>
-     </div>
-</div>
+
+
 <script type="text/javascript">
-     $(document).ready(function() {
-          init_manage();
+     $(document).ready(function(){
+             MANAGE.init();
+             MANAGE.kpi.init();
      })
 </script>
