--- a/app/assets/stylesheets/Entry.css
+++ b/app/assets/stylesheets/Entry.css
@@ -36,9 +36,12 @@
 .entry-left-menu li:not(:first-of-type):hover{
     color:#F5A133;
 }
-
 .entry-left-menu li.active{
+    cursor:default
+}
+.entry-left-menu li.active a{
     color:#F5A133;
+    pointer-events:none;
 }
 /********************************************************************************************************* 右边
 *******************************************************************************************************************/
