--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -9,15 +9,14 @@
  * compiled file, but it's generally better to create a new file per style scope.
  *
 
-*= require brilliantech.base
-*= require brilliantech.railsepm
+
 *= require datepicker
 *= require datetimepicker
 *= require wayne_sunny
 *= require _epm_base
 *= require chosen
 *= require Analytic-main
-*= require font-awesome.min
+*= require font-awesome
 *= require aero
 *= require Manage
 *= require Manage-kpi
